--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	</head>
 	<body>
 		<header>
+			<h1><b>IS MY FIRST PRACTIC IN JAVASCRIPT</b></h1>
 		</header>
 		<script src="./main.js"></script>
 	</body>
